--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-6 text-center" data-aos="fade">
-              <h1 class="font-secondary  font-weight-bold text-uppercase">Grab yours now</h1>
+              <h1 class="font-secondary  font-weight-bold">Catch us @<br>7200132319</h1>
             </div>
           </div>
         </div>
