added some images

--- a/index.html
+++ b/index.html
@@ -130,28 +130,28 @@
             <div class="text-center">
               <span class="flaticon-money-bag-with-dollar-symbol display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Exclusive Pricing</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nobis?</p>
+              <p>Star battery always provides customised pricing solutions based on your needs</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="100">
             <div class="text-center">
               <span class="flaticon-bar-chart display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Unbeatable Performance</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nobis?</p>
+              <p>All kinds of high Performance batteries with more 10+ Hours of backups are provided</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="200">
             <div class="text-center">
               <span class="flaticon-medal display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">5+ Years of happy Service</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nobis?</p>
+              <p>We are happily serving homes around Kayalpatnam, Tiruchendur, Arumuganeri, Authoor Etc...</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="text-center">
               <span class="flaticon-box display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Free Consultaion</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nobis?</p>
+              <p>Drop a message to our team for free Suggestions and Assistance</p>
             </div>
           </div>
         </div>
@@ -166,9 +166,16 @@
         <div class="col-lg-5 ml-lg-auto py-5">
           <span class="caption d-block mb-2 font-secondary font-weight-bold">Outstanding Services</span>
           <h2 class="site-section-heading text-uppercase font-secondary mb-5">Best Seller</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aliquid eius facilis voluptatem eligendi magnam accusamus vel commodi asperiores sint rem reprehenderit nobis nesciunt veniam qui fugit doloremque numquam quod.</p>
-
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora distinctio ipsam nesciunt recusandae repellendus asperiores amet.</p>  
+          <p>Warranty - 48 Months latest Gel technology</p>
+          <p>Gel guarantees up to 20% more power</p>
+          <p>Back-up time (400W)*: ~3 hours</p>
+          <p>Maintenance free</p>
+          <p>Requires no water top-up</p>
+          <p>Zero spillage risk</p>
+          <p>Environment friendly, emits no fumes</p>
+          <p>Consistent Power back up and longer life</p>
+          <br><br>
+          <button type="button" class="btn btn-outline-primary">₹ 22,050.00</button>
         </div>
       </div>
     </div>
@@ -266,19 +273,19 @@
             <p class="mb-5"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></p>
           </div>
           <div class="col-lg-5 ml-auto">
-            <h2 class="site-section-heading mb-3 font-secondary text-uppercase">Free Templates By Colorlib</h2>
-            <p class="mb-5">Ullam ut modi cum voluptatibus atque nulla quidem maxime enim animi cupiditate, mollitia. </p>
+            <h2 class="site-section-heading mb-3 font-secondary text-uppercase">Make it smart with Zelio</h2>
+            <p class="mb-5">Zelio Smart Invertor provides notifcation of power through mobile applications </p>
 
             <div class="row">
               <div class="col-lg-6">
                 <div class="counter">
-                  <span class="caption">Current Downloads</span>
-                  <span class="number" data-number="49020">0</span>
+                  <span class="caption">Current installation</span>
+                  <span class="number" data-number="230">0</span>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="counter">
-                  <span class="caption">Number of Templates</span>
+                  <span class="caption">Number of intrests</span>
                   <span class="number" data-number="275">0</span>
                 </div>
               </div>
@@ -308,8 +315,8 @@
                 <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle w-25 mx-auto">
               </div>
               <div>
-                <h2 class="h5 mb-4">Katie Johnson</h2>
-                <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                <h2 class="h5 mb-4">Afras Ali @ Kayalpatnam</h2>
+                <blockquote>&ldquo;Amazing Consultaion with super fast delivery, Executives are cool and friendly&rdquo;</blockquote>
               </div>
             </div>
 
@@ -318,8 +325,8 @@
                 <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-25 mx-auto">
               </div>
               <div>
-                <h2 class="h5 mb-4">Jun Mars</h2>
-                <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                <h2 class="h5 mb-4">Ibrahim @Authoor</h2>
+                <blockquote>&ldquo;Happy with the service that was really under my budget <br>which was suggested by the team&rdquo;</blockquote>
               </div>
             </div>
 
@@ -328,12 +335,12 @@
                 <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-25 mx-auto">
               </div>
               <div>
-                <h2 class="h5 mb-4">Shane Holmes</h2>
-                <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                <h2 class="h5 mb-4">Shakthivel @Tiruchendur</h2>
+                <blockquote>&ldquo;My entire family is served by Star Battery Services and loved to have more requests!&rdquo;</blockquote>
               </div>
             </div>
 
-            <div class="d-block block-testimony mx-auto text-center">
+            <!-- <div class="d-block block-testimony mx-auto text-center">
               <div class="person w-25 mx-auto mb-4">
                 <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-25 mx-auto">
               </div>
@@ -341,7 +348,7 @@
                 <h2 class="h5 mb-4">Mark Johnson</h2>
                 <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
               </div>
-            </div>
+            </div> -->
 
         </div>
 
