--- a/gallery.html
+++ b/gallery.html
@@ -98,7 +98,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-md-5 text-center" data-aos="fade">
           <h1 class="text-uppercase">Gallery</h1>
-          <span class="caption d-block text-white">Free Templates by<a href="#">Colorlib</a></span>
+          <span class="caption d-block text-white">Super fast solutions by<a href="#">Star battery</a></span>
         </div>
       </div>
     </div>  
@@ -192,12 +192,12 @@
                   </ul>
               </div>
               <div class="col-md-6">
-                <h3 class="footer-heading mb-4 text-white">Free Templates</h3>
+                <h3 class="footer-heading mb-4 text-white">Free Consultations</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">HTML5 / CSS3</a></li>
-                    <li><a href="#">Clean Design</a></li>
-                    <li><a href="#">Responsive</a></li>
-                    <li><a href="#">Multi Purpose Template</a></li>
+                    <li><a href="#">Inertor/ Battery</a></li>
+                    <li><a href="#">Maintenance</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Warranty</a></li>
                   </ul>
               </div>
             </div>
@@ -234,7 +234,7 @@
           <div class="col-md-12">
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+            <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a> -->
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
 
